# cert-blockchain

./: .dockerignore  .env.api.example  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Dockerfile.fast  FIREWALL-ACTION-REQUIRED.md  FIREWALL-SETUP.md  GENESIS_MIGRATION_GUIDE.md  GENESIS_SCRIPT_ANALYSIS.md  GIT_SAFETY_REPORT.md  Makefile  README.md  VALIDATOR_QUICK_START.md  VALIDATOR_SETUP_GUIDE.md  buf.gen.yaml  check_proto.go  check_signer.go  docker-compose.yml  go.mod  go.sum  handlers_faucet.go  server.go
api/: certd_tx.go  handlers_api_keys.go  handlers_api_keys_test.go  handlers_attestation.go  handlers_auth.go  handlers_bridge.go  handlers_certid_vc.go  handlers_common.go  handlers_crosschain.go  handlers_dashboard.go  handlers_developer.go  handlers_did.go  handlers_did_test.go  handlers_discourse_sso.go  handlers_enterprise.go  handlers_explorer.go  handlers_faucet.go  handlers_governance.go  handlers_identity.go  handlers_kyc.go  handlers_profile.go  handlers_referral.go  handlers_referral_test.go  handlers_social.go  handlers_staking.go  handlers_sybil.go  handlers_sybil_test.go  middleware.go  openapi.yaml  server.go
app/: ante.go  app.go  app_config.go  evm.go  genesis.go  mock_distr.go
config/: app.toml
contracts/: CertID.sol  EncryptedAttestation.sol  hardhat.config.js  inheritance-graph.dot  package.json
docs/: TOKENOMICS.md
proto/: buf.yaml
scripts/: add-validator.sh  apply-firewall-remote.sh  check-firewall-status.sh  configure-firewall.sh  (+8 more)
services/stylus-verifier/: Cargo.toml
services/stylus-verifier/src/: lib.rs
(+206 files in other folders)
