[package]
name = "certid-stylus-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "CertID Hardware Attestation Verifier for Arbitrum Stylus (WASM)"
keywords = ["arbitrum", "stylus", "certid", "depin", "tee"]

[dependencies]
alloy-primitives = "=0.8.20"
alloy-sol-types = "=0.8.20"
mini-alloc = "0.8.4"
stylus-sdk = "0.8.4"
# Pin ruint to avoid const-generic breakage in 1.17.x
ruint = "=1.12.3"

[dev-dependencies]
tokio = { version = "1.12.0", features = ["full"] }
stylus-sdk = { version = "0.8.4", features = ["stylus-test"] }
alloy-primitives = { version = "=0.8.20", features = ["sha3-keccak"] }

[features]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
